[package]
name = "hello_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiberius = { version = "0.12.2" , features = ["all"] }
config = { version = "0.13.4", features = [] }
anyhow = "1.0.75"
tokio = { version = "1.35.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-util = "0.7.10"